--- a/Assignment2.html
+++ b/Assignment2.html
@@ -122,7 +122,7 @@
 	}
 </style>
 <body >
-<h1>Assignment !!!</h1>
+<h1>Woo-hoo! MORE CODING!!! Exciting!</h1>
 	<section class="column-lg-4 colmn-md-6 colmn-sm-12">
 		<div>
 			<p class="sub1">Section</p>
